--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Piyanshu Mangla",
   "license": "ISC",
+  "engines": {
+    "node": "16.13.1"
+  },
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
