--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Piyanshu Mangla",
   "license": "ISC",
   "engines": {
-    "node": "16.13.1"
+    "node": "16.13.1",
+    "npm": "8.1.2"
   },
   "dependencies": {
     "ejs": "^3.1.5",
